--- a/app/src/main/res/values-v27/styles.xml
+++ b/app/src/main/res/values-v27/styles.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="AppTheme.NoActionBar.WhiteStatusBar" parent="AppTheme.NoActionBar">
+    <style name="AppTheme.WhiteStatusBar" parent="AppTheme">
         <item name="android:statusBarColor">@color/colorBackgroundWhite</item>
         <item name="android:windowLightStatusBar">true</item>
-        <item name="android:navigationBarColor">@color/colorBackgroundWhite</item>
+        <item name="android:navigationBarColor">@color/colorWhite</item>
         <item name="android:windowLightNavigationBar">true</item>
     </style>
 </resources>
