--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -19,6 +19,6 @@
     <item
         android:id="@+id/info"
         android:icon="@drawable/sdb_navigation_info"
-        android:title="@string/menu_info"/>
+        android:title="@string/menu_information"/>
 
 </menu>
