--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -11,8 +11,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_default"
+        android:clipChildren="false"
         android:textColor="@color/colorBlack"
         android:textSize="25sp"
+        android:paddingTop="@dimen/margin_twice_half"
         app:layout_constraintBottom_toTopOf="@+id/fcv_container"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
