--- a/app/src/main/res/layout/fragment_project.xml
+++ b/app/src/main/res/layout/fragment_project.xml
@@ -2,14 +2,14 @@
 <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/rv_dev_library"
+    android:id="@+id/rv_dev_project"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/margin_half"
+    android:clipToPadding="false"
     android:orientation="vertical"
     android:overScrollMode="never"
-    android:scrollbars="vertical"
     android:padding="@dimen/margin_default"
+    android:scrollbars="vertical"
     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
     app:layout_constraintTop_toBottomOf="@+id/tv_title_dev_library"
     tools:listitem="@layout/layout_project_item" />
