--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -13,8 +13,8 @@
 
     <item
         android:id="@+id/android"
-        android:icon="@drawable/sdb_navigation_android"
-        android:title="@string/menu_android"/>
+        android:icon="@drawable/sdb_navigation_project"
+        android:title="@string/menu_project" />
 
     <item
         android:id="@+id/info"
