--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -15,7 +15,7 @@
 
     <fragment
         android:id="@+id/android"
-        android:name="me.sungbin.portfolio.ui.fragment.AndroidFragment"
+        android:name="me.sungbin.portfolio.ui.fragment.ProjectFragment"
         android:label="AndroidFragment" />
 
     <fragment
