:heart: 아이콘 크게 바꿈 :heart:

--- a/app/src/main/res/layout/layout_project_item.xml
+++ b/app/src/main/res/layout/layout_project_item.xml
@@ -33,7 +33,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:src="@drawable/devles" />
+                tools:src="@drawable/github" />
 
             <View
                 android:id="@+id/view_line"
