--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,4 +30,11 @@
         <item name="android:windowFullscreen">true</item>
     </style>
 
+    <style name="ContentTitleTextView">
+        <item name="android:layout_margin">@dimen/margin_default</item>
+        <item name="android:textColor">@color/colorBlack</item>
+        <item name="android:textSize">25sp</item>
+        <item name="android:paddingTop">@dimen/margin_twice_half</item>
+    </style>
+
 </resources>
